tests/expectations/compiler/array/array_too_small_fail.out
Error [ETYC0372076]: An array cannot be empty
    --> compiler-test:3:20
     |
   3 |     transition foo(a: [bool; 0]) -> bool {
     |                    ^^^^^^^^^^^^
Error [ETYC0372076]: An array cannot be empty
    --> compiler-test:4:19
     |
   4 |         let bar = [false; 0];
     |                   ^^^^^^^^^^
